--- a/ui/src/main/res/values-night/themes.xml
+++ b/ui/src/main/res/values-night/themes.xml
@@ -1,6 +1,6 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Theme.AndroidARK" parent="Theme.MaterialComponents.DayNight.NoActionBar">
+    <style name="Theme.APP" parent="Theme.MaterialComponents.DayNight.NoActionBar">
         <!-- Primary brand color. -->
         <item name="colorPrimary">@color/teal_200</item>
         <item name="colorPrimaryVariant">@color/teal_700</item>
@@ -26,8 +26,8 @@
         <item name="statusBarBackground" >?attr/colorPrimaryVariant</item>
 
         <!-- Customize your theme here. -->
-        <item name="ARKColor.BackgroundBlue">@color/light_blue_50</item>
-        <item name="ARKColor.BackgroundGreen">@color/light_green_200</item>
+        <item name="APPColor.BackgroundBlue">@color/light_blue_50</item>
+        <item name="APPColor.BackgroundGreen">@color/light_green_200</item>
 
     </style>
 </resources>
