--- a/ui/src/main/res/values/attr.xml
+++ b/ui/src/main/res/values/attr.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <attr format="reference|color" name="ARKColor.BackgroundGreen"/>
-    <attr format="reference|color" name="ARKColor.BackgroundBlue"/>
+    <attr format="reference|color" name="APPColor.BackgroundGreen"/>
+    <attr format="reference|color" name="APPColor.BackgroundBlue"/>
 </resources>
