--- a/ui/src/main/res/values/themes.xml
+++ b/ui/src/main/res/values/themes.xml
@@ -24,7 +24,7 @@
         <item name="colorOnSurface">@color/white</item>
 
         <!-- Status bar color. -->
-        <item name="statusBarBackground">?attr/colorPrimaryVariant</item>
+        <item name="statusBarBackground">?attr/backgroundColor</item>
 
         <!-- Customize your theme here. -->
         <item name="APPColor.BackgroundBlue">@color/light_blue_300</item>
