--- a/ui-sample/src/main/res/layout/xml_color_system.xml
+++ b/ui-sample/src/main/res/layout/xml_color_system.xml
@@ -2,13 +2,13 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:padding="@dimen/standard_padding">
 
     <androidx.compose.ui.platform.ComposeView
         android:id="@+id/compose_color_01"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:paddingTop="30.dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -16,7 +16,7 @@
         android:id="@+id/xml_color_01"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:paddingTop="30.dp"
+        android:paddingTop="@dimen/standard_spacing"
         android:text="@string/theme_color_test_for_xml"
         android:textColor="?attr/colorPrimary"
         app:layout_constraintStart_toStartOf="parent"
@@ -26,7 +26,7 @@
         android:id="@+id/compose_color_02"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:paddingTop="30.dp"
+        android:paddingTop="@dimen/standard_spacing"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/xml_color_01" />
 
@@ -34,7 +34,7 @@
         android:id="@+id/xml_color_02"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:paddingTop="30.dp"
+        android:paddingTop="@dimen/standard_spacing"
         android:text="@string/extended_color_test_for_xml"
         android:textColor="@color/button_background"
         app:layout_constraintStart_toStartOf="parent"
