--- a/ui/src/main/res/values/colors-light.xml
+++ b/ui/src/main/res/values/colors-light.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <!-- Function Color -->
-    <color name="button_background">@color/purple_200</color>
-    <color name="button_content">@color/black</color>
+    <color name="button_background">@color/purple_500</color>
+    <color name="button_content">@color/white</color>
     <color name="error_out_line">@color/red_700</color>
 
 </resources>
