--- a/ui/src/main/res/values-night/themes.xml
+++ b/ui/src/main/res/values-night/themes.xml
@@ -2,8 +2,8 @@
     <!-- Base application theme. -->
     <style name="Theme.App" parent="Theme.MaterialComponents.Light.DarkActionBar">
         <!-- Primary brand color. -->
-        <item name="colorPrimary">@color/teal_200</item>
-        <item name="colorPrimaryVariant">@color/teal_700</item>
+        <item name="colorPrimary">@color/purple_200</item>
+        <item name="colorPrimaryVariant">@color/purple_700</item>
         <item name="colorOnPrimary">@color/black</item>
         <!-- Secondary brand color. -->
         <item name="colorSecondary">@color/teal_200</item>
@@ -12,18 +12,19 @@
 
         <!-- background -->
         <item name="backgroundColor">@color/black</item>
-        <item name="colorOnBackground">@color/black</item>
+        <item name="colorOnBackground">@color/white</item>
 
         <!-- error -->
-        <item name="colorError">@color/red_700</item>
-        <item name="colorOnError">@color/red_700</item>
+        <item name="colorError">@color/red_250</item>
+        <item name="colorOnError">@color/black</item>
 
         <!-- surface -->
-        <item name="colorSurface">@color/black</item>
-        <item name="colorOnSurface">@color/black</item>
+        <item name="colorSurface">@color/black50</item>
+        <item name="colorOnSurface">@color/white</item>
 
         <!-- Status bar color. -->
         <item name="statusBarBackground" >?attr/backgroundColor</item>
+        <item name="android:statusBarColor">?attr/backgroundColor</item>
 
         <!-- Customize your theme here. -->
         <item name="APPColor.BackgroundBlue">@color/light_blue_50</item>
