--- a/ui-sample/src/main/res/layout/xml_color_system.xml
+++ b/ui-sample/src/main/res/layout/xml_color_system.xml
@@ -3,6 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="?attr/backgroundColor"
     android:padding="@dimen/standard_padding">
 
     <androidx.compose.ui.platform.ComposeView
