--- a/ui/src/main/res/values-night/themes.xml
+++ b/ui/src/main/res/values-night/themes.xml
@@ -11,7 +11,7 @@
         <item name="colorOnSecondary">@color/black</item>
 
         <!-- background -->
-        <item name="backgroundColor">@color/black</item>
+        <item name="backgroundColor">@color/black50</item>
         <item name="colorOnBackground">@color/white</item>
 
         <!-- error -->
@@ -24,7 +24,7 @@
 
         <!-- Status bar color. -->
         <item name="statusBarBackground" >?attr/backgroundColor</item>
-        <item name="android:statusBarColor">?attr/backgroundColor</item>
+        <item name="android:statusBarColor">?attr/colorPrimaryVariant</item>
 
         <!-- Customize your theme here. -->
         <item name="APPColor.BackgroundBlue">@color/light_blue_50</item>
