apply typography to ui-sample

--- a/ui-sample/src/main/res/layout/xml_color_system.xml
+++ b/ui-sample/src/main/res/layout/xml_color_system.xml
@@ -15,6 +15,7 @@
 
     <TextView
         android:id="@+id/xml_color_01"
+        style="@style/Body01"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:paddingTop="@dimen/standard_spacing"
@@ -33,6 +34,7 @@
 
     <TextView
         android:id="@+id/xml_color_02"
+        style="@style/Body01"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:paddingTop="@dimen/standard_spacing"
