update app bottom background color

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,8 +12,9 @@
         android:layout_marginStart="0dp"
         android:layout_marginEnd="0dp"
         android:background="?android:attr/windowBackground"
+        app:backgroundTint="?attr/backgroundColor"
         app:itemIconTint="@drawable/bottom_bar_color"
-        app:itemRippleColor="@color/grey200"
+        app:itemRippleColor="@color/grey_200"
         app:itemTextColor="@drawable/bottom_bar_color"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
