--- a/app/src/main/res/drawable/bottom_bar_color.xml
+++ b/app/src/main/res/drawable/bottom_bar_color.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:state_checked="true" android:color="@color/purple_500" />
-    <item android:color="@color/grey700"  />
+    <item android:state_checked="true" android:color="?attr/colorPrimary" />
+    <item android:color="@color/unselect_color"  />
 </selector>
