--- a/ui/src/main/res/values-night/colors-night.xml
+++ b/ui/src/main/res/values-night/colors-night.xml
@@ -4,5 +4,6 @@
     <color name="button_background">@color/purple_200</color>
     <color name="button_content">@color/black</color>
     <color name="error_out_line">@color/red_250</color>
+    <color name="unselect_color">@color/grey_400</color>
 
 </resources>
