--- a/ui/src/main/res/values/colors-base.xml
+++ b/ui/src/main/res/values/colors-base.xml
@@ -28,19 +28,19 @@
 
     <!--Black-->
     <color name="black">#FF000000</color>
-    <color name="black50">#FF121212</color>
+    <color name="black_50">#FF121212</color>
 
     <!-- Grey-->
-    <color name="grey50" tools:ignore="MissingDefaultResource">#FFFAFAFA</color>
-    <color name="grey100">#FFF5F5F5</color>
-    <color name="grey200">#FFEEEEEE</color>
-    <color name="grey300" tools:ignore="MissingDefaultResource">#FFE0E0E0</color>
-    <color name="grey400" tools:ignore="MissingDefaultResource">#FFBDBDBD</color>
-    <color name="grey500" tools:ignore="MissingDefaultResource">#FF9E9E9E</color>
-    <color name="grey600" tools:ignore="MissingDefaultResource">#FF757575</color>
-    <color name="grey700">#FF616161</color>
-    <color name="grey800" tools:ignore="MissingDefaultResource">#FF424242</color>
-    <color name="grey900" tools:ignore="MissingDefaultResource">#FF212121</color>
+    <color name="grey_50" tools:ignore="MissingDefaultResource">#FFFAFAFA</color>
+    <color name="grey_100">#FFF5F5F5</color>
+    <color name="grey_200">#FFEEEEEE</color>
+    <color name="grey_300" tools:ignore="MissingDefaultResource">#FFE0E0E0</color>
+    <color name="grey_400" tools:ignore="MissingDefaultResource">#FFBDBDBD</color>
+    <color name="grey_500" tools:ignore="MissingDefaultResource">#FF9E9E9E</color>
+    <color name="grey_600" tools:ignore="MissingDefaultResource">#FF757575</color>
+    <color name="grey_700">#FF616161</color>
+    <color name="grey_800" tools:ignore="MissingDefaultResource">#FF424242</color>
+    <color name="grey_900" tools:ignore="MissingDefaultResource">#FF212121</color>
 
 </resources>
 
