--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -6,16 +6,16 @@
 
     <fragment
         android:id="@+id/navigation_home"
-        android:name="com.thoughtworks.ark.ui.home.ui.HomeFragment"
+        android:name="com.thoughtworks.ark.home.ui.HomeFragment"
         android:label="@string/title_home" />
 
     <fragment
         android:id="@+id/navigation_dashboard"
-        android:name="com.thoughtworks.ark.ui.dashboard.ui.DashboardFragment"
+        android:name="com.thoughtworks.ark.dashboard.ui.DashboardFragment"
         android:label="@string/title_dashboard" />
 
     <fragment
         android:id="@+id/navigation_notifications"
-        android:name="com.thoughtworks.ark.ui.notifications.ui.NotificationsFragment"
+        android:name="com.thoughtworks.ark.notifications.ui.NotificationsFragment"
         android:label="@string/title_notifications" />
 </navigation>
