--- a/ui/src/main/res/values/dimens.xml
+++ b/ui/src/main/res/values/dimens.xml
@@ -14,6 +14,7 @@
     <dimen name="dimension_40">40dp</dimen>
     <dimen name="dimension_44">44dp</dimen>
     <dimen name="dimension_48">48dp</dimen>
+    <dimen name="dimension_96">96dp</dimen>
 
     <dimen name="standard_padding">@dimen/dimension_16</dimen>
     <dimen name="half_padding">@dimen/dimension_8</dimen>
