--- a/video/src/main/res/layout/layout_simple_video_view.xml
+++ b/video/src/main/res/layout/layout_simple_video_view.xml
@@ -5,4 +5,4 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:animateLayoutChanges="true"
-    app:surface_type="texture_view" />
+    app:surface_type="surface_view" />
