feat: add webViewBar

--- a/webview/src/main/res/layout/activity_web_view.xml
+++ b/webview/src/main/res/layout/activity_web_view.xml
@@ -9,24 +9,17 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
-    <LinearLayout
+    <com.thoughtworks.ark.webview.WebViewTitleBar
+        android:id="@+id/custom_header"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical">
+        android:layout_height="wrap_content" />
 
-        <View
-            android:id="@+id/title"
-            android:layout_width="match_parent"
-            android:layout_height="?android:attr/actionBarSize"
-            android:background="?attr/colorPrimary" />
-
-        <ProgressBar
-            android:id="@+id/progress_bar"
-            style="@style/Widget.AppCompat.ProgressBar.Horizontal"
-            android:layout_width="match_parent"
-            android:layout_height="2dp"
-            android:max="100"
-            android:progressTint="?attr/colorOnPrimary"
-            tools:progress="10" />
-    </LinearLayout>
+    <ProgressBar
+        android:id="@+id/progress_bar"
+        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
+        android:layout_width="match_parent"
+        android:layout_height="2dp"
+        android:max="100"
+        android:progressTint="?attr/colorOnPrimary"
+        tools:progress="10" />
 </FrameLayout>
