--- a/webview/src/main/res/layout/activity_web_view.xml
+++ b/webview/src/main/res/layout/activity_web_view.xml
@@ -9,17 +9,23 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
-    <com.thoughtworks.ark.webview.WebViewTitleBar
-        android:id="@+id/custom_header"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
 
-    <ProgressBar
-        android:id="@+id/progress_bar"
-        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
-        android:layout_width="match_parent"
-        android:layout_height="2dp"
-        android:max="100"
-        android:progressTint="?attr/colorOnPrimary"
-        tools:progress="10" />
+        <com.thoughtworks.ark.webview.WebViewTitleBar
+            android:id="@+id/title_bar"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+
+        <ProgressBar
+            android:id="@+id/progress_bar"
+            style="@style/Widget.AppCompat.ProgressBar.Horizontal"
+            android:layout_width="match_parent"
+            android:layout_height="2dp"
+            android:max="100"
+            android:progressTint="?attr/colorOnPrimary"
+            tools:progress="10" />
+    </LinearLayout>
 </FrameLayout>
