--- a/webview/src/main/res/layout/activity_web_view.xml
+++ b/webview/src/main/res/layout/activity_web_view.xml
@@ -1,23 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:orientation="vertical">
 
-    <WebView
-        android:id="@+id/web_view"
+    <com.thoughtworks.ark.webview.WebViewTitleBar
+        android:id="@+id/title_bar"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="wrap_content" />
 
-    <LinearLayout
+    <FrameLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical">
+        android:layout_height="match_parent">
 
-        <com.thoughtworks.ark.webview.WebViewTitleBar
-            android:id="@+id/title_bar"
+        <WebView
+            android:id="@+id/web_view"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+            android:layout_height="match_parent" />
 
         <ProgressBar
             android:id="@+id/progress_bar"
@@ -27,5 +27,5 @@
             android:max="100"
             android:progressTint="?attr/colorOnPrimary"
             tools:progress="10" />
-    </LinearLayout>
-</FrameLayout>
+    </FrameLayout>
+</LinearLayout>
