--- a/webview/src/main/res/layout/web_view_title_bar.xml
+++ b/webview/src/main/res/layout/web_view_title_bar.xml
@@ -31,7 +31,7 @@
         android:text="@string/title"
         android:ellipsize="end"
         android:maxLines="1"
-        android:gravity="center"
+        android:gravity="center_vertical|start"
         android:textColor="?attr/colorOnPrimary"
         android:textSize="18sp" />
 </FrameLayout>
