--- a/webview/src/main/res/layout/web_view_title_bar.xml
+++ b/webview/src/main/res/layout/web_view_title_bar.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="?android:attr/actionBarSize"
     android:background="?attr/colorPrimary">
@@ -11,16 +12,16 @@
         android:layout_height="match_parent"
         android:padding="@dimen/dimension_16"
         android:src="@drawable/ic_arrow_back"
-        app:tint="?attr/colorOnPrimary" />
+        app:tint="?android:attr/textColorPrimary" />
 
     <ImageView
         android:id="@+id/btn_close"
         android:layout_width="?android:attr/actionBarSize"
         android:layout_height="match_parent"
-        android:padding="@dimen/dimension_16"
         android:layout_gravity="end"
+        android:padding="@dimen/dimension_16"
         android:src="@drawable/ic_close"
-        app:tint="?attr/colorOnPrimary" />
+        app:tint="?android:attr/textColorPrimary" />
 
     <TextView
         android:id="@+id/title"
@@ -28,10 +29,11 @@
         android:layout_height="match_parent"
         android:layout_marginStart="?android:attr/actionBarSize"
         android:layout_marginEnd="?android:attr/actionBarSize"
-        android:text="@string/title"
         android:ellipsize="end"
-        android:maxLines="1"
         android:gravity="center_vertical|start"
-        android:textColor="?attr/colorOnPrimary"
-        android:textSize="18sp" />
+        android:maxLines="1"
+        android:textColor="?android:attr/textColorPrimary"
+        android:textSize="20sp"
+        android:textStyle="bold"
+        tools:text="title" />
 </FrameLayout>
