--- a/ui/src/main/res/values-night/themes.xml
+++ b/ui/src/main/res/values-night/themes.xml
@@ -1,10 +1,13 @@
-<resources xmlns:tools="http://schemas.android.com/tools">
+<resources>
     <!-- Base application theme. -->
     <style name="Theme.App" parent="Theme.MaterialComponents.Light.DarkActionBar">
         <!-- Primary brand color. -->
         <item name="colorPrimary">@color/purple_200</item>
         <item name="colorPrimaryVariant">@color/purple_700</item>
         <item name="colorOnPrimary">@color/black</item>
+
+        <item name="android:textColorPrimary">@color/white</item>
+
         <!-- Secondary brand color. -->
         <item name="colorSecondary">@color/teal_200</item>
         <item name="colorSecondaryVariant">@color/teal_200</item>
@@ -23,7 +26,7 @@
         <item name="colorOnSurface">@color/white</item>
 
         <!-- Status bar color. -->
-        <item name="statusBarBackground" >?attr/backgroundColor</item>
+        <item name="statusBarBackground">?attr/backgroundColor</item>
         <item name="android:statusBarColor">?attr/colorPrimaryVariant</item>
 
         <!-- Customize your theme here. -->
